# ITMO_ICT_WebDevelopment_tools_2023-2024

./: .gitignore  404.html  index.html
lr_1/database/: index.html
lr_1/endpoints/: index.html
lr_1/files/: index.html
lr_1/specification/: index.html
lr_2/specification/: index.html
lr_2/task_1/: index.html
lr_2/task_2/: index.html
lr_3/broker/: index.html
lr_3/containerization/: index.html
lr_3/queue/: index.html
lr_3/specification/: index.html
search/: search_index.json
students/k33422/Malaev_Stepan/lr_3/: .env  Dockerfile  docker-compose.yaml  pyproject.toml
students/k33422/Malaev_Stepan/lr_3/migrations/versions/: a419cea1151d_initial_revision.py
students/k33422/Malaev_Stepan/lr_3/src/: main.py  worker.py
students/k33422/Malaev_Stepan/lr_3/src/config/: api.py  authorization.py  redis.py
students/k33422/Malaev_Stepan/lr_3/src/dependencies/: __init__.py  budget.py  category.py  database.py  network.py  transaction.py  user.py
students/k33422/Malaev_Stepan/lr_3/src/endpoints/: __init__.py  authorization.py  budget.py  category.py  relationship.py  task.py  transaction.py  user.py
students/k33422/Malaev_Stepan/lr_3/src/enums/: types.py
students/k33422/Malaev_Stepan/lr_3/src/models/: __init__.py  base.py  transaction.py  transaction_category.py  user.py
students/k33422/Malaev_Stepan/lr_3/src/schemas/: __init__.py  relationship.py  task.py
students/k33422/Malaev_Stepan/lr_3/src/services/: authorization.py  network.py  pagination.py  repository.py  string.py
students/k33422/Malaev_Stepan/lr_3/src/tasks/: __init__.py  parsing.py
(+62 files in other folders)
