[tool.poetry]
name = "lr-1"
version = "0.1.0"
description = ""
authors = ["bezstrok <pocandre87@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.34" }
pydantic = { extras = ["email"], version = "^2.9.1" }
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
alembic = "^1.13.2"
orjson = "^3.10.7"
asyncpg = "^0.29.0"
pyjwt = "^2.9.0"
cryptography = "^43.0.1"
bcrypt = "^4.2.0"
alembic-postgresql-enum = "^1.3.0"
pydantic-settings = "^2.5.2"
taskiq = "^0.11.7"
taskiq-redis = "^1.0.0"
aiohttp = "^3.10.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 127
target-version = "py311"
show-fixes = true

[tool.mypy]
ignore_missing_imports = true
implicit_optional = true
check_untyped_defs = true
strict = true
